--- a/css/examstyle.css
+++ b/css/examstyle.css
@@ -40,18 +40,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;;
 }
 
 .steps {
     width: 20%;
     max-width: 20%;
     padding: 3px;
+    height: 20px;
     /* background-color: cornflowerblue; */
     text-align: center;
     color: #777;
     cursor: pointer;
     transition: ease-in-out 1s;
     position: relative;
+    font-size: 12px;
 }
 
 .steps:first-child,
@@ -77,7 +80,7 @@
 }
 
 .exam_title_input_div input{
-    width: 50%;
+    width: min(100%, 550px);
     height: 40px;
     font-size: 16px;
     padding: 10px;
@@ -96,7 +99,7 @@
 }
 
 .exam_date_time_input_div div{
-    width: 50%;
+    width: min(100% ,550px );
     /* background-color: yellow; */
     /* border-left: 2px solid olive;s */
 }
@@ -146,7 +149,7 @@
 }
 
 .guideline_form_outer_div input{
-    width: 50%;
+    width: min(100%, 550px);
     height: 40px;
     font-size: 16px;
     padding: 10px;
@@ -163,7 +166,7 @@
 }
 
 .guideline_discription_div textarea {
-    width: 50%;
+    width: min(100%, 550px);
     border: none;
     outline: 1px solid #000;
     margin-top: 20px;
@@ -183,7 +186,7 @@
 }
 
 .basic_form_outer_div input{
-    width: 50%;
+    width: min(100%, 550px);
     height: 40px;
     font-size: 16px;
     padding: 10px;
@@ -200,7 +203,7 @@
 }
 
 .basic_form_outer_div textarea {
-    width: 50%;
+    width: min(100%, 550px);
     border: none;
     outline: 1px solid #000;
     margin-top: 20px;
@@ -221,7 +224,7 @@
 }
 
 .rules_form_outer_div input{
-    width: 50%;
+    width: min(100%, 550px);
     height: 40px;
     font-size: 16px;
     padding: 10px;
@@ -238,7 +241,7 @@
 }
 
 .rules_form_outer_div textarea {
-    width: 50%;
+    width: min(100%, 550px);
     border: none;
     outline: 1px solid #000;
     margin-top: 20px;
@@ -259,7 +262,7 @@
 }
 
 .extra_attempt_form_outer_div input{
-    width: 50%;
+    width: min(100%, 550px);
     height: 40px;
     font-size: 16px;
     padding: 10px;
@@ -276,7 +279,7 @@
 }
 
 .extra_attempt_form_outer_div textarea {
-    width: 50%;
+    width: min(100%, 550px);
     border: none;
     outline: 1px solid #000;
     margin-top: 20px;
@@ -317,7 +320,7 @@
 
 .steps_circle {
     display: inline-block;
-    width: 25px;
+    width: 20px;
     height: 100%;
     background-color: #ccc;
     position: absolute;
@@ -337,6 +340,12 @@
     height: 100%;
     background-color: var(--color);
     border-radius: 50%;
+}
+
+@media only screen and (max-width: 990px) {
+    .steps {
+        font-size: 10px;
+    }
 }
 
 
