--- a/css/viewexam.css
+++ b/css/viewexam.css
@@ -51,6 +51,13 @@
     letter-spacing: 1px;
 }
 
+.exam_search_div {
+    position: relative;
+}
+
+.exam_filter {
+    position: relative;
+}
 /* --------------------------Header End------------------------------ */
 
 /* --------------------------Exam Table Start------------------------ */
@@ -102,6 +109,6 @@
 .view_exam_footer {
     width: 100%;
     height: 10%;
-    background-color: #855600;
+    /* background-color: #855600; */
 }
 /* --------------------------Footer End------------------------ */
