--- a/css/viewstudent.css
+++ b/css/viewstudent.css
@@ -60,9 +60,9 @@
 
 .dropdown_search {
     position: absolute;
-    width: 180px;
-    height: 25px;
-    border-radius: 10px;
+    width: 200px;
+    height: 30px;
+    border-radius: 4px;
     background-color: #f0f0f0;
     top: 25px;
     right: 0;
@@ -71,12 +71,16 @@
     justify-content: center;
     border: 1px solid var(--color);
     overflow : hidden;
+    transform: translateY(20px);
+    transition: ease-in-out .3s;
 }
 
 .dropdown_search input {
     outline: none;
     border: none;
     padding-left: 10px;
+    width: 100%;
+    height: 70%;
     background-color: transparent;
 }
 
